<resources>
    <string name="cgpa">Calculate CGPA</string>
    <string name="selected_option"> </string>
    <string name="result">RESULT</string>
    <string name="app_name">SGPA</string>
    <string name="MAT31">21MAT31</string>
    <string name="CS32">21**32 </string>
    <string name="CS33">21**33</string>
    <string name="CS34">21**34</string>
    <string name="CSL35">21**L35</string>
    <string name="UH36">21**36</string>
    <string name="KBK37">21KBK37/21KSK37/21CIP37</string>
    <string name="CS381">21**38X</string>
    <string name="sgpa">SGPA    CALCULATOR</string>
    <string name="cgpatext">CGPA    CALCULATOR</string>
    <string name="CS">Compute Science Calculator</string>
    <string name="button">RESULT</string>
    <string name="total">Total</string>
    <string name="submit">Submit</string>
    <string name="INT49">21INT49</string>

    <string-array name="field1_options">
        <item>2018 Scheme</item>
        <item>2021 Scheme</item>
        <item>2022 Scheme</item>
    </string-array>

    <string-array name="field2_options">
        <item>Aeronautical</item>
        <item>AIML</item>
        <item>Computer Science</item>
        <item>Civil</item>
        <item>IOT</item>
        <item>Electronics and Communication</item>
        <item>Mechatronics</item>
        <item>Mechanical</item>
        <item>Information Science</item>
        <item>Computer Science(AIML)</item>
        <item>Computer Science(IoT)</item>
        <!-- Add more options -->
    </string-array>

    <string-array name="field3_options">
        <item>SEM 1</item>
        <item>SEM 2</item>
        <item>SEM 3</item>
        <item>SEM 4</item>
        <item>SEM 5</item>
        <item>SEM 6</item>
        <item>SEM 7</item>
        <item>SEM 8</item>
        <!-- Add more options -->
    </string-array>

    <string name="scheme_prompt">Scheme</string>
    <string name="branch_prompt">Branch</string>
    <string name="semester_prompt">Semester</string>

    <string name="CS41">21MAT41</string>
    <string name="CS42">21**42</string>
    <string name="CS43">21**43</string>
    <string name="CS44">21**44</string>
    <string name="CS45">21**45</string>
    <string name="CS46">21**L46</string>
    <string name="KBK47">21KSK47/21KBK47/21CIP47</string>
    <string name="CS481">21**48X</string>
    <string name="CS49">21UH49</string>

    <string name="sub51">21**51</string>
    <string name="sub52">21**52 </string>
    <string name="sub53">21**53</string>
    <string name="sub54">21**54</string>
    <string name="sub55">21**L55</string>
    <string name="sub56">21**56</string>
    <string name="sub57">21**57</string>
    <string name="sub58">21**58X</string>
    <string name="sub59">21**59</string>
    <string name="subL57">21**L57</string>
    <string name="subL58">21**L58</string>

    <string name="sub61">21**61</string>
    <string name="sub62">21**62 </string>
    <string name="sub63">21**63</string>
    <string name="sub64">21**64X</string>
    <string name="sub65">21**65X</string>
    <string name="sub66">21**L66</string>
    <string name="sub67">21**67</string>
    <string name="sub68">21INT68</string>

    <string name="sub71">21**71</string>
    <string name="sub72">21**72 </string>
    <string name="sub73">21**73X</string>
    <string name="sub74">21**74X</string>
    <string name="sub75">21**75X</string>
    <string name="sub76">21**P76</string>

    <string name="sub81">21**81</string>
    <string name="sub82">21INT82 </string>
    <string name="sub83">21**83</string>

    <string name="sub1851">18**51 </string>
    <string name="sub1852">18**52 </string>
    <string name="sub1853">18**53 </string>
    <string name="sub1854">18**54 </string>
    <string name="sub1855">18**55 </string>
    <string name="sub1856">18**56 </string>
    <string name="sub1857">18**57L </string>
    <string name="sub1858">18**58L </string>
    <string name="sub1859">18**59 </string>

    <string name="sub1861">18**61 </string>
    <string name="sub1862">18**62 </string>
    <string name="sub1863">18**63 </string>
    <string name="sub1864">18**64X </string>
    <string name="sub1865">18**65X </string>
    <string name="sub1866">18**L66 </string>
    <string name="sub1867">18**L67 </string>
    <string name="sub1868">18**P68 </string>

    <string name="sub1871">18**71 </string>
    <string name="sub1872">18**72 </string>
    <string name="sub1873">18**73X </string>
    <string name="sub1874">18**74X </string>
    <string name="sub1875">18**75X </string>
    <string name="sub1876">18**76 </string>
    <string name="sub1877">18**77 </string>
    <string name="sub1878">18**78 </string>

    <string name="sub1881">18**81 </string>
    <string name="sub1882">18**82X </string>
    <string name="sub1883">18**P83 </string>
    <string name="sub1884">18**S84 </string>
    <string name="sub1885">18**I85 </string>

    <string name="sub20101">22**101 </string>
    <string name="sub20102">22**102 </string>
    <string name="sub20103">22**103 </string>
    <string name="sub20104">22**104X</string>
    <string name="sub20105">22**105X </string>
    <string name="sub20106">22**106 </string>
    <string name="sub20107">22**107 </string>
    <string name="sub20108">22**158 </string>

    <string name="sub20201">22**201 </string>
    <string name="sub20202">22**202 </string>
    <string name="sub20203">22**203 </string>
    <string name="sub20204">22**204X</string>
    <string name="sub20205">22**205X </string>
    <string name="sub20206">22**206 </string>
    <string name="sub20207">22**207 </string>
    <string name="sub20208">22**258 </string>


    <string name="select">Select Item</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>

    <string name="sem1">SEM 1</string>
    <string name="sem2">SEM 2</string>
    <string name="sem3">SEM 3</string>
    <string name="sem4">SEM 4</string>
    <string name="sem5">SEM 5</string>
    <string name="sem6">SEM 6</string>
    <string name="sem7">SEM 7</string>
    <string name="sem8">SEM 8</string>

</resources>