<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity_5eng18"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView"
            android:background="@drawable/text_background"
            style="@style/textview"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1851"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1852"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1853"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal4"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1854"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal5"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1855"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal6"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1856"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal7"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1857"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal8"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1858"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <EditText
            android:id="@+id/editTextNumberDecimal9"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/sub1859"
            android:importantForAutofill="no"
            style="@style/editText"/>

        <!-- End of updated EditText views -->

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:text="@string/button"
            style="@style/SubmitButton"/>

        <TextView
            android:id="@+id/resultview5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/total"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            style="@style/editText"/>


    </LinearLayout>

</ScrollView>
